Fixed loginform so the button is not hidden by the keyboard

--- a/src/modules/login/components/LoginForm.scss
+++ b/src/modules/login/components/LoginForm.scss
@@ -15,7 +15,7 @@
 .loginButton {
     width: 100%;
     height: 2.8rem;
-    margin-top: 1rem;
+    margin-top: 0.5rem;
     background-color: $brand-white;
     font-size: 0.9rem;
     font-weight: 300;
